[package]
name = "good_server_udp4"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
parking_lot = "0.12"
crossbeam-channel = "0.5"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.1.5"
sha2 = "0.10.9"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
thiserror = "2.0.17"
lz4_flex = "0.11.5"
zstd = "0.13.3"
ctrlc = "3.5.1"
clap = "4.5.51"

[[bin]]
name = "udp-server"
path = "src/main.rs"

[[bin]]
name = "udp-client"
path = "src/bin/client.rs"


